[package]
name = "microledger-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ed25519-dalek]
version = "1"

[dependencies]
rand = { version = "0.7"}
rand_core = { version = "0.5"}
brotli = { version = "3.3.4"}
automerge = "0.5.7"
serde_json = "1.0.114"
